messed up previous commit.. now adding html for top nav bar and some style

--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,11 @@ p {
     margin: 0 auto;
 }
 
+.header{
+    display: flex;
+    justify-content: space-between;
+}
+
 .top-content {
     display: flex;
     flex-wrap: wrap;
