--- a/css/index.css
+++ b/css/index.css
@@ -176,6 +176,31 @@ footer nav a {
 }
 
 .aboutBox{
+    border-bottom:1px dashed black;
+    width:48%;
+    margin-bottom: 6%;
+}
+
+.aboutBox img{
+    margin-bottom: 2%;
+}
+
+.aboutBox button{
     border:1px solid black;
-	width:48%;
+    margin-top: 4%;
+    margin-bottom: 4%;
+    border-radius: 6px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    padding-right: 3%;
+    padding-left: 3%;
+    background-color:white;
+}
+
+.bottomContent {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
 }
