--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,7 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     border-bottom: 1px dashed black;
 }
 
@@ -128,12 +128,49 @@ p {
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
     margin: 20px 2.5%;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.box:nth-child(1){
+    background:teal;
+}
+.box:nth-child(2){
+    background:gold;
+}
+.box:nth-child(3){
+    background:cadetblue;
+}
+
+.box:nth-child(4){
+    background:coral;
+}
+
+.box:nth-child(5){
+    background:crimson;
+}
+
+.box:nth-child(6){
+    background:forestgreen;
+}
+
+.box:nth-child(7){
+    background:darkorchid;
+}
+
+.box:nth-child(8){
+    background:hotpink;
+}
+
+.box:nth-child(9){
+    background:indigo;
+}
+
+.box:nth-child(10){
+    background:dodgerblue;
 }
 
 .bottom-content {
