--- a/css/index.css
+++ b/css/index.css
@@ -109,7 +109,17 @@ p {
     padding-bottom: 20px;
 }
 
+@keyframes slideInFromLeft {
+    0%{
+        transform: translateX(-100%);
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
+
 .middle-content {
+    animation: 1s ease-out 0s 1 slideInFromLeft;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
 }
